# Open-Med-AI

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  setup_env.bat  vite.config.ts
python/: Inference.py  ServerUtils.py  Utils.py  ai_server.py  cancel_generation.py  check_gpu.py  hugginface_login.py  requirements.txt  run_inference_service.py  send_chat_example.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib legacy.rs  lib.rs  main.rs
src/Components/: ChatInput.tsx  Editor.tsx  MessageList.tsx  ResponseDisplay.tsx  SideBar.tsx  WorkflowEditor.tsx
src/Components/StartScreen/: LoadingScreen.tsx  NoAIScreen.tsx  ServerStartUpLogs.css  ServerStartUpLogs.tsx
src/Generics/: SolidMarkdown.css  SolidMarkdown.tsx
src/hooks/: useKeyboardShortcut.ts
src/tauri/: coms.ts  db legacy.ts  db.ts  migrate_db.ts
