[package]
name = "openmed-ai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "med_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3.31"
tokio-util = { version = "0.7.18", features = ["io"] }
tower-http = { version = "0.6.8", features = ["cors", "limit"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
mime_guess = "2.0.5"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
